--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -24,7 +24,7 @@ body{
       box-sizing: border-box;
       padding: 1rem; 
   
-      @media (min-width: theme('screens.sm')) {
+      @media (min-width: 640px) {
         width: calc(50% - 1rem); 
       }
   
