dodanie cen dostawy
dodanie tez tailwinda

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,3 +1,7 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 @button-color: #E57F84;
 @navbar-color: lavender;
 
