--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,11 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+
+body{
+    margin: 0;
+    padding: 0;
+    background-color: ivory;
+}
+
